// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportDetails /> should render ReportDetails 1`] = `
<div>
  <div
    id="detailed-incident"
  >
    <div
      className=""
    >
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Title: 
          </h4>
        </div>
        <p
          id="incident-title"
        />
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Type: 
          </h4>
        </div>
        <p
          id="incident-type"
        />
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Created: 
          </h4>
        </div>
        <p>
           
        </p>
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Status: 
          </h4>
        </div>
        <p
          id="incident-status"
        />
      </div>
      <div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Location: 
            </h4>
          </div>
          <p
            id="incident-location"
          />
        </div>
        <div>
          <h4>
            Map
          </h4>
          <div>
            <iframe
              allowFullScreen={true}
              frameBorder="0"
              height="100%"
              src="youth"
              style={
                Object {
                  "border": 0,
                  "position": "absolute",
                }
              }
              title="'s map"
              width="100%"
            />
          </div>
        </div>
        <div>
          <h4>
            Comment: 
          </h4>
          <textarea
            disabled={true}
            id="incident-comment"
            name="comment"
            value="jhdfhfdjk"
          />
        </div>
      </div>
      <div>
        <h4>
          Images or Videos: 
        </h4>
        <div>
          <div
            id="incident-video-div"
          />
          <div
            id="incident-img-div"
          >
            <img
              alt=""
              key="0"
              src="hi"
            />
            <img
              alt=""
              key="1"
              src="helo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReportDetails /> should render a different content when the route is /admin 1`] = `
<div>
  <div
    id="detailed-incident"
  >
    <div
      className=""
    >
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Title: 
          </h4>
        </div>
        <p
          id="incident-title"
        />
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Type: 
          </h4>
        </div>
        <p
          id="incident-type"
        />
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Created: 
          </h4>
        </div>
        <p>
           
        </p>
      </div>
      <div>
        <div>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="check-circle"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          <h4>
            Status: 
          </h4>
        </div>
        <p
          id="incident-status"
        />
      </div>
      <div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Location: 
            </h4>
          </div>
          <p
            id="incident-location"
          />
        </div>
        <div>
          <h4>
            Map
          </h4>
          <div>
            <iframe
              allowFullScreen={true}
              frameBorder="0"
              height="100%"
              src="youth"
              style={
                Object {
                  "border": 0,
                  "position": "absolute",
                }
              }
              title="'s map"
              width="100%"
            />
          </div>
        </div>
        <div>
          <h4>
            Comment: 
          </h4>
          <textarea
            disabled={true}
            id="incident-comment"
            name="comment"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
